--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "scripts": {
+    "allure:generate": "npx allure generate ./allure-results --clean",
+    "allure:open": "npx allure open ./allure-report",
+    "allure:serve": "npx allure serve",
+    "test": "npx playwright test",
+    "posttest": "npm run allure:generate"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.17.1"
+    "@playwright/test": "^1.17.1",
+    "allure-commandline": "^2.13.8",
+    "allure-playwright": "^2.0.0-beta.14"
   }
 }
