changed target_url for gh pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,5 +100,4 @@ jobs:
           context: 'Test report'
           state: 'success'
           sha: ${{ github.event.pull_request.head.sha }}
-          target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
-          
+          target_url: https://kshyk.github.io/playwright-fw/allure-history/${{ github.run_number }}
