--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,7 @@ jobs:
         with: 
           authToken: ${{ secrets.GITHUB_TOKEN }}
           context: 'Test report'
+          description: 'Report is for ${{ matrix.os }} (${{ matrix.browser }})'
           state: 'success'
-          sha: ${{ github.event.pull_request.head.sha }}
-          target_url: kshyk.github.io/playwright-fw/${{ github.run_number }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          target_url: https://kshyk.github.io/playwright-fw/${{ github.run_number }}
