--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,14 +52,14 @@ jobs:
       - name: Install browsers
         run: npx playwright install --with-deps ${{ matrix.browser }} chromium
         
-      - name: Run tests on ${{ matrix.browser }} browser
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1366x768x24" -- npm test -- --project=${{ matrix.browser }}
+      - name: Run tests
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1366x768x24" -- npx playwright test --project=${{ matrix.browser }} --output=allure-results/${{ matrix.os }}/${{ matrix.browser }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: allure-results
-          path: allure-results
+          name: allure-results-${{ matrix.os }}-${{ matrix.browser }}
+          path: allure-results/${{ matrix.os }}/${{ matrix.browser }}
           retention-days: 30
         
       - name: Get Allure history
@@ -75,10 +75,10 @@ jobs:
         if: always()
         id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: allure-results/${{ matrix.os }}/${{ matrix.browser }}
           gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
+          allure_report: allure-report/${{ matrix.os }}/${{ matrix.browser }}
+          allure_history: allure-history/${{ matrix.os }}/${{ matrix.browser }}
           keep_reports: 30
 
       - name: Deploy report to Github Pages
@@ -87,7 +87,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: allure-history/${{ matrix.os }}/${{ matrix.browser }}
           full_commit_message: ${{ github.event.head_commit.message }}
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
