--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: allure-results-${{ matrix.os }}-${{ matrix.browser }}
+          name: allure-results
           path: allure-results
           retention-days: 30
         
