added mac os matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,10 +62,68 @@ jobs:
           name: Test results for ${{ matrix.os }} (${{ matrix.browser }})
           path: test-results/junit-results.xml
 
+  test_mac:
+    name: ${{ matrix.os }} (${{ matrix.browser }})
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-10.15, macos-11]
+        browser: [chromium, firefox, webkit]
+    runs-on: ${{ matrix.os }}
+    
+    steps:
+      - name: Checkout ${{ github.repository }} repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+        env:
+          DEBUG: pw:install
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+
+      - name: Install browsers
+        run: npx playwright install --with-deps ${{ matrix.browser }} chromium
+        
+      - name: Run Playwright tests
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1366x768x24" -- npm test -- --project=${{ matrix.browser }}
+
+      - name: Upload artifacts
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test results for ${{ matrix.os }} (${{ matrix.browser }})
+          path: test-results/junit-results.xml
+
   publish-linux-results:
     name: "Publish Linux test results"
     needs: test_linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    if: always()
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: artifacts
+
+      - name: Publish test results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: artifacts/**/*.xml
+
+  publish-macos-results:
+    name: "Publish MacOS test results"
+    needs: test_mac
+    runs-on: macos-11
     if: always()
 
     steps:
