--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browser: [chromium, firefox, webkit]
         os: [ubuntu-18.04, ubuntu-20.04]
+        browser: [chromium, firefox, webkit, msedge]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -67,7 +67,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-10.15, macos-11]
-        browser: [chromium, firefox, webkit]
+        browser: [chromium, firefox, webkit, msedge]
     runs-on: ${{ matrix.os }}
     
     steps:
@@ -106,7 +106,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        browser: [chromium, firefox, webkit]
+        browser: [chromium, firefox, webkit, msedge]
     runs-on: ${{ matrix.os }}
     
     steps:
