fix for not supported async;s in forEach'es

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "no-loops", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -10,7 +10,6 @@
   ],
   "rules": {
     "no-console": 1,
-    "no-loops/no-loops": 2,
     "prettier/prettier": 2
   }
 }
