--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "pretty": "prettier --config .prettierrc . --write",
     "test": "npx playwright test"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretty && npm run lint"
+    }
+  },
   "devDependencies": {
     "@playwright/test": "^1.17.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
@@ -12,6 +17,7 @@
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
