add bash shell to avoid ms error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,6 +131,7 @@ jobs:
 
       - name: Make ESLint
         run: npm run lint
+        shell: bash
 
       - name: Run Playwright tests
         run: npm test -- --project=${{ matrix.browser }}
