--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     }
   },
   "devDependencies": {
-    "@playwright/test": "^1.18.0",
+    "@playwright/test": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "allure-commandline": "^2.17.2",
+    "allure-playwright": "^2.0.0-beta.15",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
