--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,8 +1,8 @@
-name: "Close stale issues and PRs"
+name: 'Close stale issues and PRs'
 
 on:
   schedule:
-    - cron: "0 22 * * 5"
+    - cron: '0 22 * * 5'
 
 jobs:
   stale:
@@ -12,7 +12,7 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: "Mark stale issues and PRs"
+      - name: 'Mark stale issues and PRs'
         uses: actions/stale@v7
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
@@ -20,9 +20,9 @@ jobs:
           days-before-pr-stale: 7
           days-before-issue-close: 10
           days-before-pr-close: 7
-          stale-issue-label: "no-issue-activity"
-          stale-issue-message: "This issue is stale because it has been open 10 days with no activity. Remove stale label or comment or this will be closed in 3 days."
-          close-issue-message: "This issue was closed because it has been stalled for 10 days with no activity."
-          stale-pr-label: "no-pr-activity"
-          stale-pr-message: "This PR is stale because it has been open 7 days with no activity. Remove stale label or comment or this will be closed in 2 days."
-          close-pr-message: "This PR was closed because it has been stalled for 7 days with no activity."
+          stale-issue-label: 'no-issue-activity'
+          stale-issue-message: 'This issue is stale because it has been open 10 days with no activity. Remove stale label or comment or this will be closed in 3 days.'
+          close-issue-message: 'This issue was closed because it has been stalled for 10 days with no activity.'
+          stale-pr-label: 'no-pr-activity'
+          stale-pr-message: 'This PR is stale because it has been open 7 days with no activity. Remove stale label or comment or this will be closed in 2 days.'
+          close-pr-message: 'This PR was closed because it has been stalled for 7 days with no activity.'
