Fixed README file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/git,node,intellij+all,linux,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=git,node,intellij+all,linux,macos
+# Created by https://www.toptal.com/developers/gitignore/api/git,node,linux,macos,intellij+all
+# Edit at https://www.toptal.com/developers/gitignore?templates=git,node,linux,macos,intellij+all
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -99,7 +99,6 @@ fabric.properties
 # Ignore everything but code style settings and run configurations
 # that are supposed to be shared within teams.
 
-.idea
 .idea/*
 
 !.idea/codeStyles
@@ -292,3 +291,5 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
+
+# End of https://www.toptal.com/developers/gitignore/api/git,node,linux,macos,intellij+all
