--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
-          npx playwright install --with-deps ${{ matrix.browser }} chromium
+          npx playwright install --with-deps ${{ matrix.browser }}
         env:
           DEBUG: pw:install
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
@@ -77,7 +77,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
-          npx playwright install --with-deps ${{ matrix.browser }} chromium
+          npx playwright install --with-deps ${{ matrix.browser }}
         env:
           DEBUG: pw:install
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
@@ -116,7 +116,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
-          npx playwright install --with-deps ${{ matrix.browser }} chromium
+          npx playwright install --with-deps ${{ matrix.browser }}
         env:
           DEBUG: pw:install
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
